--- a/glide.yaml
+++ b/glide.yaml
@@ -20,7 +20,7 @@ import:
   - assert
 - package: github.com/davecgh/go-spew
 - package: git.apache.org/thrift.git
-  version: 0.10.0-http-client-fix
-  repo: git@github.com:rdelval/thrift.git
+  version: b2a4d4ae21c789b689dd162deb819665567f481c
   subpackages:
-  - lib/go/thrift
+    - lib/go/thrift
+- package: github.com/docker/docker
